# ai-saas-kit

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRODUCT.md  README.md  SALES.md  SECURITY.md  SPONSORS.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  run.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
app/: __init__.py
app/api/middleware/: __init__.py
app/api/routes/: __init__.py  chat.py  prompts.py  tenants.py  usage.py
app/core/: __init__.py  config.py  database.py  rate_limit.py  security.py
app/models/: __init__.py
app/services/: ai_service.py  tenant_service.py
docs/publication-drafts/: HN_Show_HN.md  IndieHackers.md  Reddit_r_SaaS.md  Reddit_r_webdev.md
prisma/: schema.prisma
scripts/: setup.sh
src/_old_ai/chat/: route.ts
src/_old_auth/: layout.tsx
src/_old_landing/: layout.tsx
src/_old_stripe/portal/: route.ts
src/_old_stripe/webhook/: route.ts
src/app/: layout.tsx  page.tsx
src/app/api/stripe/checkout/: route.ts
src/app/dashboard/: layout.tsx  page.tsx
src/app/dashboard/billing/: page.tsx
src/app/dashboard/settings/: page.tsx
src/app/login/: page.tsx
src/app/register/: layout.tsx  page.tsx
src/components/: theme-toggle.tsx
src/components/ui/: badge.tsx  dropdown-menu.tsx
src/hooks/: use-theme.ts
src/lib/: ai.ts  auth.ts  stripe.ts  utils.ts
src/styles/: globals.css
src/types/: next-auth.d.ts
tests/: __init__.py  conftest.py
